Setup Home Page and made it responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </span>
 
     <span class="images-right">
-      <img src="img/jesus-christ-home-image.jpeg" alt="" />
+      <img src="img/jesus-christ-home-image.jpeg" alt="" class="img-1" />
       <img src="img/jesus-christ-home-image2.jpeg" alt="" class="img-2" />
     </span>
 
@@ -64,16 +64,16 @@
       </h2>
       <h2><a href="St.%20George.html">St. George</a></h2>
       <h2><a href="St.%20Paul.html">St. Paul</a></h2>
-      <h2><a href="St.%20Vianney.html"> St. Vianney </a></h2>
-      <h2><a href="St.%20Philip%20Neri.html">St. Philip Neri </a></h2>
-      <h2><a href="St.%20Philip.html">St. Philip </a></h2>
-      <h2><a href="St.%20John%20XXIII.html">St. John XXIII </a></h2>
+      <h2><a href="St.%20Vianney.html">St. Vianney</a></h2>
+      <h2><a href="St.%20Philip%20Neri.html">St. Philip Neri</a></h2>
+      <h2><a href="St.%20Philip.html">St. Philip</a></h2>
+      <h2><a href="St.%20John%20XXIII.html">St. John XXIII</a></h2>
       <h2>
-        <a href="St.%20Therese%20of%20Liseux.html"> St. Therese of Liseux </a>
+        <a href="St.%20Therese%20of%20Liseux.html">St. Therese of Liseux</a>
       </h2>
-      <h2><a href="St.%20Nicholas.html"> St. Nicholas </a></h2>
+      <h2><a href="St.%20Nicholas.html">St. Nicholas</a></h2>
       <h2>
-        <a href="St.%20Francis%20de%20Sales.html"> St. Francis de Sales </a>
+        <a href="St.%20Francis%20de%20Sales.html">St. Francis de Sales</a>
       </h2>
     </span>
 
@@ -84,7 +84,7 @@
         <a href="https://aidantomcy.github.io">Aidan Tomcy Champannoor</a><br />
         If you have any doubts/complaints/feedback, please mail your queries to
         aidantomcy@gmail.com <br />
-        Source-<a href="https://www.wikipedia.org/">Wikipedia </a>
+        Source-<a href="https://www.wikipedia.org/">Wikipedia</a>
       </p>
     </span>
   </body>
