Added first saint and made website responsive

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
   </head>
   <body>
     <h1 class="title">Saints for Us</h1>
-    <span class="quote">
+    <div class="quote">
       <h1>"Your word is a lamp to guide my feet and a light for my path."</h1>
       <h1 class="align-right">-Psalm 119:105</h1>
-    </span>
+    </div>
 
-    <span class="images-right">
+    <div class="images-right">
       <img src="img/jesus-christ-home-image.jpeg" alt="" class="img-1" />
       <img src="img/jesus-christ-home-image2.jpeg" alt="" class="img-2" />
-    </span>
+    </div>
 
-    <span class="links">
+    <div class="links">
       <h2>
-        <a href="St.%20Anthony%20of%20Padua.html"> St. Anthony of Padua </a>
+        <a href="stanthony.html"> St. Anthony of Padua </a>
       </h2>
       <h2>
-        <a href="St.%20Francis%20of%20Assisi.html"> St. Francis of Assisi </a>
+        <a href="stfrancisassisi.html"> St. Francis of Assisi </a>
       </h2>
       <h2>
         <a href="St.%20%20Aidan%20of%20Lindisfarne.html">
@@ -75,17 +75,22 @@
       <h2>
         <a href="St.%20Francis%20de%20Sales.html">St. Francis de Sales</a>
       </h2>
-    </span>
+    </div>
 
-    <span class="contact-info">
+    <div class="contact-info">
       <p>
         <br />
-        Made by-
-        <a href="https://aidantomcy.github.io">Aidan Tomcy Champannoor</a><br />
+        Made by-<a href="https://aidantomcy.github.io">Aidan Tomcy Champannoor</a><br />
         If you have any doubts/complaints/feedback, please mail your queries to
         aidantomcy@gmail.com <br />
         Source-<a href="https://www.wikipedia.org/">Wikipedia</a>
       </p>
-    </span>
+    </div>
+
+    <script>
+      document.addEventListener("contextmenu", (event) =>
+        event.preventDefault()
+      );
+    </script>
   </body>
 </html>
