Remove br tags added by mistake

--- a/stanthony.html
+++ b/stanthony.html
@@ -204,12 +204,12 @@
         </div>
         <div class="text">
           <p>
-            <br />St. Anthony of Padua (15 August 1195-13 June 1231), also known
-            as Anthony of Lisbon, was a <br />Portuguese Catholic Priest and
-            Friar of the Franciscan Order. He was born and raised by a
-            <br />wealthy family in Lisbon, Portugal, and died in Padua, Italy.
-            Noted by his contempararies for <br />his powerful preaching, expert
-            knowledge of scripture and undying love and devotion to the <br />
+            St. Anthony of Padua (15 August 1195-13 June 1231), also known as
+            Anthony of Lisbon, was a <br />Portuguese Catholic Priest and Friar
+            of the Franciscan Order. He was born and raised by a <br />wealthy
+            family in Lisbon, Portugal, and died in Padua, Italy. Noted by his
+            contempararies for <br />his powerful preaching, expert knowledge of
+            scripture and undying love and devotion to the <br />
             poor and the sick, he was one of the most quickly canonized saints
             in church history. He was <br />
             proclaimed a Doctor of the Church on 16 January 1946. He is also the
