Modified links from older version

--- a/index.html
+++ b/index.html
@@ -27,53 +27,49 @@
 
     <div class="links">
       <h2>
-        <a href="stanthony.html"> St. Anthony of Padua </a>
+        <a href="stanthony.html">St. Anthony of Padua</a>
       </h2>
       <h2>
-        <a href="stfrancisassisi.html"> St. Francis of Assisi </a>
+        <a href="stfrancisassisi.html">St. Francis of Assisi</a>
       </h2>
       <h2>
-        <a href="St.%20%20Aidan%20of%20Lindisfarne.html">
-          St. Aidan of Lindisfarne
-        </a>
+        <a href="staidanlindisfarne.html">St. Aidan of Lindisfarne</a>
       </h2>
-      <h2><a href="St.%20Francis%20Xavier.html"> St. Francis Xavier </a></h2>
+      <h2><a href="stfrancisxavier.html">St. Francis Xavier</a></h2>
       <h2>
-        <a href="Blessed%20Carlo%20Acutis.html"> Blessed Carlo Acutis </a>
+        <a href="blessedcarloacutis.html">Blessed Carlo Acutis</a>
       </h2>
-      <h2><a href="St.%20Agnes.html"> St. Agnes </a></h2>
+      <h2><a href="stagnes.html">St. Agnes</a></h2>
       <h2>
-        <a href="St.%20Kuriakose%20Elias%20Chavara.html">
-          St. Kuriakose Elias Chavara
-        </a>
+        <a href="stkuriakose.html">St. Kuriakose Elias Chavara</a>
       </h2>
-      <h2><a href="St.%20Joan%20of%20Arc.html">St. Joan of Arc</a></h2>
-      <h2><a href="St.%20Peter.html">St. Peter</a></h2>
-      <h2><a href="St.%20Bernadette.html">St. Bernadette</a></h2>
+      <h2><a href="stjoan.html">St. Joan of Arc</a></h2>
+      <h2><a href="stpeter.html">St. Peter</a></h2>
+      <h2><a href="stbernadette.html">St. Bernadette</a></h2>
       <h2>
-        <a href="St.%20John%20the%20Baptist.html">St. John the Baptist</a>
+        <a href="stjohnbaptist.html">St. John the Baptist</a>
       </h2>
-      <h2><a href="Mother%20Mary.html">Mother Mary</a></h2>
-      <h2><a href="St.%20Joseph.html">St. Joseph</a></h2>
-      <h2><a href="Mother%20Teresa.html">Mother Teresa</a></h2>
-      <h2><a href="St.%20Thomas.html">St. Thomas</a></h2>
-      <h2><a href="St.%20Sebastian.html">St. Sebastian</a></h2>
-      <h2><a href="St.%20John%20Paul%20II.html">St. John Paul II</a></h2>
+      <h2><a href="mothermary.html">Mother Mary</a></h2>
+      <h2><a href="stjoseph.html">St. Joseph</a></h2>
+      <h2><a href="motherteresa.html">Mother Teresa</a></h2>
+      <h2><a href="stthomas.html">St. Thomas</a></h2>
+      <h2><a href="stsebastian.html">St. Sebastian</a></h2>
+      <h2><a href="stjohnpaulii.html">St. John Paul II</a></h2>
       <h2>
-        <a href="St.%20Clare%20of%20Assisi.html">St. Clare of Assisi</a>
+        <a href="stclareassisi.html">St. Clare of Assisi</a>
       </h2>
-      <h2><a href="St.%20George.html">St. George</a></h2>
-      <h2><a href="St.%20Paul.html">St. Paul</a></h2>
-      <h2><a href="St.%20Vianney.html">St. Vianney</a></h2>
-      <h2><a href="St.%20Philip%20Neri.html">St. Philip Neri</a></h2>
-      <h2><a href="St.%20Philip.html">St. Philip</a></h2>
-      <h2><a href="St.%20John%20XXIII.html">St. John XXIII</a></h2>
+      <h2><a href="stgeorge.html">St. George</a></h2>
+      <h2><a href="stpaul.html">St. Paul</a></h2>
+      <h2><a href="stvianney.html">St. Vianney</a></h2>
+      <h2><a href="stphilipneri.html">St. Philip Neri</a></h2>
+      <h2><a href="stphilip.html">St. Philip</a></h2>
+      <h2><a href="stjohnxxiii.html">St. John XXIII</a></h2>
       <h2>
-        <a href="St.%20Therese%20of%20Liseux.html">St. Therese of Liseux</a>
+        <a href="sttherese.html">St. Therese of Liseux</a>
       </h2>
-      <h2><a href="St.%20Nicholas.html">St. Nicholas</a></h2>
+      <h2><a href="stnicholas.html">St. Nicholas</a></h2>
       <h2>
-        <a href="St.%20Francis%20de%20Sales.html">St. Francis de Sales</a>
+        <a href="stfrancisdesales.html">St. Francis de Sales</a>
       </h2>
     </div>
 
