--- a/stanthony.html
+++ b/stanthony.html
@@ -407,12 +407,12 @@
       </div>
     </div>
     <div class="bottom-links">
-      <span class="btn" id="next">
+      <div class="btn" id="next">
         <h2>Next</h2>
-      </span>
-      <span class="btn" id="back">
+      </div>
+      <div class="btn" id="back">
         <h2>Back to Home Page</h2>
-      </span>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
