--- a/stfrancisassisi.html
+++ b/stfrancisassisi.html
@@ -409,18 +409,18 @@
       </div>
     </div>
     <div class="bottom-links">
-      <span class="prev-next">
-        <span class="btn" id="prev">
+      <div class="prev-next">
+        <div class="btn" id="prev">
           <h2>Prev.</h2>
-        </span>
+        </div>
         &nbsp;&nbsp;&nbsp;
-        <span class="btn" id="next">
+        <div class="btn" id="next">
           <h2>Next</h2>
-        </span>
-      </span>
-      <span class="btn" id="back">
+        </div>
+      </div>
+      <div class="btn" id="back">
         <h2>Back to Home Page</h2>
-      </span>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
