Update path in bottom links

--- a/staidanlindisfarne.html
+++ b/staidanlindisfarne.html
@@ -395,11 +395,11 @@
       });
 
       $("#prev").on("click", () => {
-        location.replace("stanthony.html");
+        location.replace("stfrancisassisi.html");
       });
 
       $("#next").on("click", () => {
-        location.replace("staidanlindisfarne.html");
+        location.replace("blessedcarloacutis.html");
       });
 
       $("#back").on("click", () => {
